deploy/k8s/api.yaml
kind: Pod
apiVersion: v1
metadata:
  name: wildberries-bot-api
  labels:
    app: api
spec:
  containers:
    - name: wildberries-bot-api
      image: 'kekit/api'
---
kind: Service
apiVersion: v1
metadata:
  name: wildberries-bot-api
spec:
  selector:
    app: api
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildberries-bot-api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: wildberries-bot-api
          image: "kekit/api"
          imagePullPolicy: Always
          resources:
            limits:
              memory: 200Mi
              cpu: "1"
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8080
